--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,7 +26,7 @@ phases:
       - pip install --upgrade awscli==1.18.17
       - aws --version
       - $(aws ecr get-login --no-include-email --region eu-central-1)
-      - REPOSITORY_URI=373796114179.dkr.ecr.eu-central-1.amazonaws.com/robot-registry
+      - REPOSITORY_URI=
       - COMMIT_HASH=$(echo $CODEBUILD_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
