--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - pip install --upgrade awscli==1.18.17
       - aws --version
-      - $(aws ecr get-login --no-include-email --region eu-central-1)
+      - $(aws ecr get-login --no-include-email --region us-east-1)
       - REPOSITORY_URI=146088804242.dkr.ecr.us-east-1.amazonaws.com/ecs-demo
       - COMMIT_HASH=$(echo $CODEBUILD_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
@@ -45,15 +45,15 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
       - apt-get install jq -y
-      - ContainerName="robot-prod-container-v2"
+      - ContainerName="demo"
       - ImageURI=$(cat imageDetail.json | jq -r '.ImageURI')
-      - printf '[{"name":"robot-prod-container-v2","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"demo","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
 
 artifacts:
   files:
     - imagedefinitions.json
-    - target/robot-service.jar
+    - target/ecs-demo.jar
   discard-paths: yes
 
 
